# openrevive

./: .dockerignore  .env.example  .gitignore  Brewfile  Makefile  README.md  compose.yaml  openrevive-schema.sql  pnpm-lock.yaml
docs/: ARCHITECTURE.md  (+7 more)
services/api/: Dockerfile  Dockerfile.lambda  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 1453286742ae_add_crawl_control_plane.py  488dd46597ff_add_crawled_documents.py  7d4b10d5c920_add_crawl_job_frontier_metadata.py  (+7 more)
services/api/app/: main.py
services/api/scripts/: evaluate_resume_brief.py
services/api/tests/: conftest.py  test_artifact_storage.py  test_basic_auth.py  test_bedrock_brief_generator.py  test_brief_quality_contract.py  test_campaign_brief_routes.py  test_campaign_brief_schema_contract.py  test_campaign_brief_service.py  test_collection_routes.py  test_config.py  test_crawl_quality.py  test_crawl_run_events.py  test_crawl_run_routes.py  test_crawl_schema_contract.py  test_document_persistence.py  test_domain_politeness.py  test_evidence_packing.py  test_evidence_planning.py  test_frontier_discovery.py  test_frontier_persistence.py  test_frontier_selection.py  test_http_fetcher.py  test_job_failure.py  test_job_finalization.py  test_job_leasing.py  test_minio_artifact_store.py  test_openapi_contract.py  test_schema_contract.py  test_worker_entrypoint.py  test_worker_frontier.py  test_worker_heartbeat_schema_contract.py  test_worker_heartbeats.py  test_worker_loop.py  test_worker_main.py  test_worker_runtime.py  test_worker_service.py  test_workspace_routes.py
(+95 files in other folders)
