[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.138.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]
