[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.34,<2.0",
    "fastapi[standard]>=0.138.0",
    "httpx>=0.28,<1.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
]

[dependency-groups]
dev = [
    "httpx2>=2.4,<3.0",
    "pytest>=9.1.1",
]

[tool.pytest]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]
